--- a/obu.html
+++ b/obu.html
@@ -368,9 +368,9 @@ padding: 6px 0px;
 											<img src="img/IIITV_Logo_1x1_small.png" width="400" height="auto">
 										</div>
 										<div class="ed-rsear-dec ed-faci-full-bot">
-											<h4><a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank">125<sup>th</sup> ANNIVERSARY OF De La Salle  College </a></h4>
+											<h4><a href="https://www.facebook.com/DeLaSalleCollegeColombo" target="_blank">116<sup>th</sup> ANNIVERSARY OF De La Salle  College </a></h4>
 											<p>Today we celebrate 116 years since the founding of De La Salle College, Colombo on the 2<sup>nd</sup> of March, 1896.</p>
-											<a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank" class="read-line-btn">Read more</a>
+											<a href="https://www.facebook.com/DeLaSalleCollegeColombo" target="_blank" class="read-line-btn">Read more</a>
 										</div>
 									</div>
                                 </li>
@@ -380,9 +380,9 @@ padding: 6px 0px;
 											<img src="img/dlsd.jpg" alt="">
 										</div>
 										<div class="ed-rsear-dec ed-faci-full-bot">
-											<h4><a href="news-new-website.php">OUR NEW WEBSITE HAS BEEN LAUNCHED </a></h4>
+											<h4><a href="#">OUR NEW WEBSITE HAS BEEN LAUNCHED </a></h4>
 											<p>We are very excited to announce the launch of our newly designed website. After two months of hard work and dedication of ICT Society...</p>
-											<a href="news-new-website.php" class="read-line-btn">Read more</a>
+											<a href="#" class="read-line-btn">Read more</a>
 										</div>
 									</div>
                                 </li>
