--- a/obu.html
+++ b/obu.html
@@ -142,7 +142,7 @@
         <!-- Content wrapper -->
         <div class="contents-wrapper">
             <!-- Contents starts here -->
-            <div class="content">
+            <!--div class="content">
                 <h1>obu</h1>
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
@@ -235,7 +235,7 @@
                     <p></p>
 
                     <p></p>
-            </div>
+            </div-->
         </div>
         </div>
         </br>
