--- a/obu.html
+++ b/obu.html
@@ -143,7 +143,7 @@
         <div class="contents-wrapper">
             <!-- Contents starts here -->
             <div class="content">
-                <h1 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">About</h1>
+               <center> <h1 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">About</h1></center>
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
                     existence, has been a haven of knowledge and inspiration to all and sundry
