--- a/index.html
+++ b/index.html
@@ -164,16 +164,14 @@
 
                                 </ul>
                             </li>
-                            <ul class="nav navbar-nav">
-                                <li>
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Admission <b class="caret"></b></a>
-                                    <ul class="dropdown-menu multi-level">
-                                        <li><a href="btech_admission.html">B.Tech</a></li>
-                                        <li><a href="mtech_admission.html">M.Tech</a></li>
-                                        <li><a href="phd_admission.html">Ph.D</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
+                            <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
+                                        class="caret"></b></a>
+                                <ul class="dropdown-menu multi-level">
+                                    <li><a href="btech_admission.html">B.Tech</a></li>
+                                    <li><a href="mtech_admission.html">M.Tech</a></li>
+                                    <li><a href="phd_admission.html">Ph.D</a></li>
+                                </ul>
                             </li>
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">People <b class="caret"></b></a>
