--- a/index.html
+++ b/index.html
@@ -122,15 +122,16 @@
                                             <li><a href="college-anthem.html">College Anthem</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="Identity/da-iict.html">History Of College</a></li>
-                                            <li><a href="Chronology College History.html">Chronology College History</a></li>
-                                            <li><a href="Identity/germi.html">Past Recters</a></li>
-                                            <li><a href="Identity/tcs.html">TCS</a></li>
-                                        </ul>
-                                    </li>
+                                    <ul class="nav navbar-nav">
+                                        <li>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Admission <b class="caret"></b></a>
+                                            <ul class="dropdown-menu multi-level">
+                                                <li><a href="btech_admission.html">B.Tech</a></li>
+                                                <li><a href="mtech_admission.html">M.Tech</a></li>
+                                                <li><a href="phd_admission.html">Ph.D</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
 
                                     <li><a href="directors_message.html">Director's Message</a></li>
                                     <li><a href="bog.html">Board of Governors</a></li>
