--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                                             <li><a href="Identity/college-crest.html">Crest</a></li>
                                             <li><a href="college-anthem.html">College Anthem</a></li>
                                         </ul>
+                                        <section>
                                     </li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
@@ -131,6 +132,7 @@
                                             <li><a href="Identity/tcs.html">TCS</a></li>
                                         </ul>
                                     </li>
+                                </section>
 
                                     <li><a href="directors_message.html">Director's Message</a></li>
                                     <li><a href="bog.html">Board of Governors</a></li>
