--- a/directors_message.html
+++ b/directors_message.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT Vadodara | Director's Message</title>
+    <title>De La Salle College Colombo 15| Director's Message</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/scroll.css">
 </head>
 
 <body>
@@ -26,8 +27,8 @@
                             </div>
                             <div class="name">
                                 <a href="index.html" title="">
-                                    <h5>Indian Institute of Information Technology</h5>
-                                    <h5 class="primary-color">Vadodara</h5>
+                                    <h5>De La Salle College Colombo</h5>
+                                    <h5 class="primary-color">Mutwal</h5>
                                 </a>
                             </div>
                         </div>
@@ -135,13 +136,13 @@
             <!-- Contents starts here -->
             <div class="content dir-msg">
                 <div class="dir-detail">
-                    <img class="responsive-img circle" src="img/Professor-R-Nagaraj.jpg">
-                    <div>Dr. R Nagaraj</div>
+                    <img class="responsive-img circle" src="img/Bro. R. Joseph Jeyakanthan.jpg">
+                    <div>Bro. R. Joseph Jeyakanthan</div>
                     <div>
-                        Director DA-IICT
+                        Director DLS
                     </div>
                     <div>
-                        Mentor Director IIIT-V
+                        Mentor Director DLS
                     </div>
                 </div>
                 <div class="dir-text">
