--- a/directors_message.html
+++ b/directors_message.html
@@ -54,7 +54,7 @@
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li class="active">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="about.html">About</a></li>
                                         <li class="active"><a href="directors_message.html">Director's Message</a></li>
