--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -136,9 +136,9 @@
         <!-- /header -->
         <div style="text-align: center;">
                 <a href="#" target="_blank"-->
-                    <img class="responsive-img" src="gif/about.gif">
+                    <!--img class="responsive-img" src="gif/about.gif">
                 </a>
-            </div>
+            </div-->
         <!-- Content wrapper -->
         <div class="contents-wrapper">
             <!-- Contents starts here -->
