--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -222,7 +222,10 @@
 
                     <p>It is our hope and prayer that De La Salle College will yield still more abundant
                         fruits for the glory of God and the welfare of Sri Lanka’s citizens.</p>
-
+            </div>
+        </div>
+    </div>
+    
                 
         </div>
         <!-- Footer -->
