--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -140,6 +140,10 @@
             <div class="content">
                 <h1>History and Location / About our College 
                 </h1>
+                </div>
+                </div>
+                </div>
+                </br>
                 
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
