--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -177,6 +177,7 @@
             </div>
         </div>
         </div>
+        </body>
         <footer>
             <div class="footer-wrapper">
                 <span class="logo"><img src="../img/IIITV_Logo_1x1_small.png" alt=""></span>
