--- a/Co-curiiicular-Activities.html
+++ b/Co-curiiicular-Activities.html
@@ -152,7 +152,7 @@
             </p>
             <p>
                 Students must follow the rules and regulations mentioned in the
-                <a href="Co-curiiicular Activities.html">Co-curiiicular Activities</a>.
+                <a href="Co-curiiicular-Activities.html">Co-curiiicular Activities</a>.
             </p>
         </div>
     </div>
