--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                         <ul class="dropdown-menu">
                                             <li><a href="Identity/da-iict.html">History Of College</a></li>
                                             <li><a href="Chronology College History.html">Chronology College History</a></li>
-                                            <li><a href="Identity/germi.html">Past Recters</a></li>
+                                            <li><a href="College-Directors.html">Past Recters</a></li>
                                             <li><a href="Identity/tcs.html">TCS</a></li>
                                         </ul>
                                     </li>
