--- a/obu.html
+++ b/obu.html
@@ -92,26 +92,38 @@ ul a:hover::after {
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li class="active">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
-                                    <ul class="dropdown-menu multi-level">
-                                        <li class="active"><a href="about.html">About</a></li>
-                                        <li><a href="directors_message.html">Director's Message</a></li>
-                                        <li><a href="bog.html">Board of Governors</a></li>
-                                        <li><a href="society_members.html">Society Members</a></li>
-                                        <li><a href="academic_council.html">Academic Council</a></li>
-                                        <li><a href="finance_committee.html">Finance Committee</a></li>
-                                        <li><a href="rti.html">RTI</a></li>
-                                        <li><a href="pdf/MOU.pdf">MOU</a></li>
-                                        <li class="dropdown-submenu">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Linkages</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="linkages/da-iict.html">DA-IICT</a></li>
-                                                <li><a href="linkages/gsfc.html">GSFC</a></li>
-                                                <li><a href="linkages/germi.html">GERMI</a></li>
-                                                <li><a href="linkages/tcs.html">TCS</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b
+                                        class="caret"></b></a>
+                                <ul class="dropdown-menu multi-level">
+                                    <li><a href="about.html">About</a></li>
+                                    <li class="dropdown-submenu">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="Identity/mission-vision.html">Vision & Mission</a></li>
+                                            <li><a href="Identity/college-motto-and-flag_colours.html">Flag</a></li>
+                                            <li><a href="Identity/college-crest.html">Crest</a></li>
+                                            <li><a href="college-anthem.html">College Anthem</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown-submenu">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="Identity/da-iict.html">History Of College</a></li>
+                                            <li><a href="Chronology College History.html">Chronology College History</a></li>
+                                            <li><a href="College-Directors.html">Past Recters</a></li>
+                                            <li><a href="Identity/tcs.html">TCS</a></li>
+                                        </ul>
+                                    </li>
+
+                                    <li><a href="directors_message.html">Director's Message</a></li>
+                                    <li><a href="bog.html">Board of Governors</a></li>
+                                    <li><a href="Chronology College History.html">Chronology College History</a></li>
+                                    <li><a href="academic_council.html">Academic Council</a></li>
+                                    <li><a href="finance_committee.html">Finance Committee</a></li>
+                                    <li><a href="rti.html">RTI</a></li>
+                                    <li><a href="pdf/MOU.pdf">MOU</a></li>
+                                    
+                                </ul>
                                 </li>
                                 <li>
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Academics <b class="caret"></b></a>
