--- a/obu.html
+++ b/obu.html
@@ -14,14 +14,15 @@
 
     <style>
     
-ul li {
-    list-style: none;
-    display: inline-block;
+ul li a + a {
+    margin-left: 30px;
 }
-
 ul li a::after {
     content: '';
     position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
     height: 2px;
     background-color: #607D8B;
     transform-origin: bottom right;
