--- a/obu.html
+++ b/obu.html
@@ -14,8 +14,17 @@
 
     <style>
     
+ul li a {
+    font-family: arial;
+    color: #ff9800;
+    text-decoration: none;
+    position: relative;
+    padding: 15px 10px;
+    font-size: 18px;
+    display: block;
+}
 ul li a + a {
-    margin-left: 30px;
+    margin-left: 16px;
 }
 ul li a::after {
     content: '';
