--- a/obu.html
+++ b/obu.html
@@ -100,11 +100,10 @@ ul a:hover::after {
                 <div class="navbar navbar-inverse navbar-custom" role="navigation">
                     <div class="container">
                         <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
+                            <button class="toggle-btn">
+                                <div class="icon-bar1"></div>
+                                <div class="icon-bar2"></div>
+                                <div class="icon-bar3"></div>
                             </button>
                         </div>
                         <div class="collapse navbar-collapse">
