--- a/obu.html
+++ b/obu.html
@@ -100,8 +100,8 @@ ul a:hover::after {
                 <div class="navbar navbar-inverse navbar-custom" role="navigation">
                     <div class="container">
                         <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            
+                            <button type="button" class="toggle-btn" data-toggle="collapse" data-target=".navbar-collapse">
+                                
                                 <div class="icon-bar1"></div>
                                 <div class="icon-bar2"></div>
                                 <div class="icon-bar3"></div>
