--- a/obu.html
+++ b/obu.html
@@ -1,3 +1,9 @@
+<!--
+ * Official Website of De La Salle College, Colombo-15
+ * A project of DLS ICT 2021 Batch
+ * Design & Develop by : Kasun Chanuka Fernando
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
