--- a/Academics.html
+++ b/Academics.html
@@ -281,6 +281,8 @@
 			</div>
 		</div>
 	</section>
+    </div>
+    </div>
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
