--- a/Academics.php.html
+++ b/Academics.php.html
@@ -7,9 +7,7 @@
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
-    <!-- Bootstrap CSS -->
-  	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  	
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
     
@@ -230,7 +228,7 @@
 						<span>01</span>
 						<h4><a href="#">Why Lorem Ipsum</a></h4>
 						<p>There are many variations of passages of available, but the majority have suffered alteration in some form</p>
-						<img src="/img/px-action-athlete-athletes-848618-image.jpg" alt="">
+						<img src="/images/image-one.jpg" alt="">
 					</div>
 				</div>
 
