--- a/Academics.php.html
+++ b/Academics.php.html
@@ -228,7 +228,7 @@
 						<span>01</span>
 						<h4><a href="#">Why Lorem Ipsum</a></h4>
 						<p>There are many variations of passages of available, but the majority have suffered alteration in some form</p>
-						<img src="/images/image-one.jpg" alt="">
+						<img src="/img/px-action-athlete-athletes-848618-image.jpg" alt="">
 					</div>
 				</div>
 
