--- a/Academics.php.html
+++ b/Academics.php.html
@@ -237,7 +237,7 @@
 						<span>02</span>
 						<h4><a href="#">Why do we use it</a></h4>
 						<p>There are many variations of Lorem Ipsum available, but the majority have suffered alteration in some form</p>
-						<img src="/images/image-two.jpg" alt="">
+						<img src="/img/event1.JPG" alt="">
 					</div>
 				</div>
 
