--- a/gallery.html
+++ b/gallery.html
@@ -292,6 +292,7 @@
             </div>
         </div>
     </div>
+    </div>
      <!-- Footer -->
      <footer>
         <div class="footer-wrapper">
