--- a/gallery.html
+++ b/gallery.html
@@ -161,7 +161,7 @@
 
                     <!--Image 1-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -171,7 +171,7 @@
 
                     <!--Image 2-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/2.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -181,7 +181,7 @@
 
                     <!--Image 3-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/3.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -191,7 +191,7 @@
 
                     <!--Image 4-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/4.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -201,7 +201,7 @@
 
                     <!--Image 5-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/5.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -211,7 +211,7 @@
 
                     <!--Image 6-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/6.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -221,7 +221,7 @@
 
                     <!--Image 7-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/7.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -231,7 +231,7 @@
 
                     <!--Image 8-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/8.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -241,7 +241,7 @@
 
                     <!--Image 9-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/9.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -251,7 +251,7 @@
 
                     <!--Image 10-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/10.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -261,7 +261,7 @@
 
                     <!--Image 11-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/11.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -271,7 +271,7 @@
 
                     <!--Image 12-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/12.jpg">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
@@ -281,7 +281,7 @@
 
                     <!--Image 13-->
                     <a class="element-item grid-item mix mockups" href="img/gallery/13.png">
-                        <!--                            <div class="desc">
+                        <                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
                                                         </div>
