--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -142,7 +142,7 @@
                 </h1>
                 </br>
             </br>
-            <img class="responsive-img" src="/img/crest-bw.png" style="width: 250px; height:250px;">
+          <center>  <img class="responsive-img" src="img/crest-bw.png" style="width: 250px; height:250px;"> </center>
                 
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
