--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -143,7 +143,8 @@
                 </br>
             </br>
           <center>  <img class="responsive-img" src="img/crest-bw.png" style="width: 250px; height:250px;"> </center>
-                
+        </br>
+        </div>
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
                     existence, has been a haven of knowledge and inspiration to all and sundry
