--- a/index.html
+++ b/index.html
@@ -585,8 +585,7 @@
                     <div class="widgets-title"><h2>News</h2></div>
                     <ul id="news-list">
                         <li>
-                            <a href="http://aviaryan.in" target="_blank">Mr. Avi Aryan</a> got selected in Google Summer
-                            of Code 2016.
+                            <a href="blog.html" target="_blank">Dear Old Boys & Well Wishers</a> of De La Salle College, It is a well known fact that Rev Br Joseph Jayakanthan who was waiting for all of us, took over duties as the Principal of the school on October 06th,  2021.
 
                         </li>
                     </ul>
